# window-capture

./: Cargo.toml
crates/common/src/: lib.rs
crates/d3d11/: Cargo.toml
crates/d3d11/src/: gs_device.rs  gs_monitor_color_info.rs  gs_texture_2d.rs  lib.rs  util.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs
src/: lib.rs  main.rs
src/window/: mod.rs  validator.rs  win_iterator.rs
