[package]
name = "window-capture"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_WinRT_Direct3D11",
    "UI",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
] }
anyhow = "1.0"
log = "0.4"

[dependencies]
windows = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
d3d11 = { path = "crates/d3d11" }
graphics = { path = "crates/graphics" }
windows-result = "0.3"
